# My-Mini-Projects

./: README.md
airflow_project/: .env  .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  check_setup.py  docker-compose.yml
airflow_project/config/: init-metadata-db.sql  init-mysql-db.sql
airflow_project/dags/: csv_ingestion_dag.py
airflow_project/utils/: __init__.py  data_processor.py  db_connectors.py
docling_project/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCUMENTATION.txt  QUICKSTART.md  README.md  create_tables.sql  docker-compose.yml  main.py  parsed_table_data_export.csv  pyproject.toml  requirements.txt
docling_project/config/: config.py
docling_project/docker/app/: Dockerfile
docling_project/docker/db/: init-db.sh
docling_project/scripts/: create_tables.sql
docling_project/src/: __init__.py
docling_project/src/database/: __init___.py  db_operations.py
docling_project/src/models/: __init__.py  table_data.py
docling_project/src/parser/: DOCUMENTATION2.TXT  __init__.py  pdf_parser.py
docling_project/tests/: conftest.py  test_db_operations.py  test_models.py  test_parser.py
evidently_grafana_project/: .env.example  .gitignore  ARCHITECTURE.md  OPERATIONS_GUIDE.md  QUICKSTART_COMPLETE.md  README.md  SETUP_COMPLETE.txt  create_drift_raw_data.py  docker-compose.yml  requirements.txt  setup.ps1  setup.sh  validate_metrics.py
opensearch_project/: .env  ARCHITECTURE.md  Dockerfile  QUICKSTARTGUIDE.md  README.md  docker-compose.yml  dump1.txt  main.py  requirements.txt  temp.txt
(+28 files in other folders)
